# zero2-prod-rust

./: .env  Cargo.toml  Dockerfile  README.md  clippy.toml  configuration.yaml
.github/workflows/: general.yml  github-actions-demo.yml  schedules-audit.yml
migrations/: 20220501162247_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configurations.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
